Testing hosting change.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
 
   <body class="amdrnt-site" data-spy="scroll" data-target=".navbar" data-offset="60">
+    <!-- Test -->
 
     <div class="amdrnt-site__content">
       <nav class="amdrnt-navbar navbar navbar-default navbar-fixed-top">
