--- a/thanks.html
+++ b/thanks.html
@@ -32,12 +32,7 @@
       <nav class="amdrnt-navbar navbar navbar-default navbar-fixed-top">
         <div class="container">
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <img class="amdrnt-logo" role="presentation" alt="Logo" src="assets/images/logo.png"/>
+            <a href="http://amdirent.com"><img class="amdrnt-logo" role="presentation" alt="Logo" src="assets/images/logo.png"/></a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="amdrnt-nav nav navbar-nav navbar-right">
