--- a/index.html
+++ b/index.html
@@ -303,11 +303,10 @@
           <div class="col-sm-5">
 
             <p>Contact us and we'll get back to you within 24 hours.</p>
-            <p><span class="glyphicon glyphicon-map-marker"></span> 833 West Chicago Ave, Ste. 214</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Chicago, US</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;60642</p>
-            <p><span class="glyphicon glyphicon-phone"></span> (312) 566-8335</p>
-            <p><span class="glyphicon glyphicon-envelope"></span> help@amdirent.com</p>
+            <p><span class="glyphicon glyphicon-map-marker"></span>833 West Chicago Ave, Ste. 214</p>
+            <p>Chicago, IL 60642</p>
+            <p><span class="glyphicon glyphicon-phone"></span>(312) 566-8335</p>
+            <p><span class="glyphicon glyphicon-envelope"></span>help@amdirent.com</p>
           </div>
           <div class="col-sm-7">
             <form accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate="" action="https://amdirent.wufoo.com/embed/pecx6t0f28hpd/#public">
@@ -323,10 +322,9 @@
                 <div class="col-sm-12 form-group pull-right">
                   <textarea class="form-control" placeholder="Comment" rows="5"  id="Field4" name="Field4" onkeyup="handleInput(this); " onchange="handleInput(this);"></textarea><br>
 
-                  <input type="hidden" id="idstamp" name="idstamp" value="9kC/S4OmEm6r8O8glPwWv+Txur6OEPUyKJrAO5u6XJU=">
-                  <input type="hidden" id="stats" name="stats" value="{&quot;errors&quot;:0,&quot;startTime&quot;:0,&quot;endTime&quot;:0,&quot;referer&quot;:null}">
+                  <input type="hidden" id="idstamp" name="idstamp" value="rWqSPl2oIjfo+uaFOS5v6BylSpbBagychXx/KusvbN0=">
+                  <input type="hidden" id="stats" name="stats" value="{"errors":0,"startTime":0,"endTime":0,"referer":"http:\/\/amdirent.com\/talk-soon.html"}">
                   <input type="hidden" id="clickOrEnter" name="clickOrEnter" value="">
-                  <input type="hidden" name="currentPage" id="currentPage" value="W9j7L4ZXktrAiTPGRbNZHLGvxPBTf4YjFUWOIfwuBeaSfA=">
                 </div>
               </div>
               <div class="row">
