--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="assets/css/glyphicons.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="assets/styles/home_page.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="wufoo.js" type="text/css" media="screen" />
+    <link rel="stylesheet" href="assets/wufoo.js" type="text/css" media="screen" />
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
