--- a/talk-soon.html
+++ b/talk-soon.html
@@ -55,8 +55,8 @@
 
       <!-- Container (Services Section) -->
       <div id="services" class="container-fluid container-fluid--extra-padding text-center">
-        <h2>We'll Talk Soon!</h2>
-        <h4>Be cool, we got this. Let us figure out whom on the team should respond. We'll be in touch shortly.</h4>
+        <h2>Be cool, we got this.</h2>
+        <h4>Let us figure out whom on the team should respond. We'll be in touch shortly.</h4>
         <span class="glyphicons glyphicons-sunglasses logo"></span>
       </div>
 
