Add message to onboard page

--- a/onboard.html
+++ b/onboard.html
@@ -83,7 +83,7 @@
 
 
       <div id="portfolio" class="container-fluid container-fluid--extra-padding text-center bg-grey">
-        <h4 style="margin: 0px;">The Amdirent Team</h4>
+        <h4 style="margin: 0px;">We'll figure out what your app will cost next.</h4>
       </div>
 
   </body>
