--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <form class="amdrnt-signup__form form-inline">
                 <div class="row">
                   <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1">
-                    <a href="https://amdirent.wufoo.com/forms/ms9kj6s01bkeqv/" type="submit" class="amdrnt-signup__form__btn btn btn-lg">Tell Us About Your Project</a>
+                    <a href="http://amdirent.com/onboard.html" type="submit" class="amdrnt-signup__form__btn btn btn-lg">Tell Us About Your Project</a>
                   </div>
                 </div>
               </form>
