Change thank you message.

--- a/thanks.html
+++ b/thanks.html
@@ -56,7 +56,7 @@
       <!-- Container (Services Section) -->
       <div id="services" class="container-fluid container-fluid--extra-padding text-center">
         <h2>Perfect!</h2>
-        <h4>We're going to review the details of your project. Sit back and you'll be hearing from us shortly!</h4>
+        <h4>We're going to review the details of your project and send over a proposal. Sit back and you'll be hearing from us shortly!</h4>
         <span class="glyphicons glyphicons-sunbath logo"></span>
       </div>
 
