Add UUID generation to wufoo form page
Adds additional identifying information that we can use on the
thank you page to pull data.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <form class="amdrnt-signup__form form-inline">
                 <div class="row">
                   <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1">
-                    <a href="http://amdirent.com/onboard.html" type="submit" class="amdrnt-signup__form__btn btn btn-lg">Get An Instant Estimate Of Your Project Cost!</a>
+                    <a href="/onboard.html" type="submit" class="amdrnt-signup__form__btn btn btn-lg">Get An Instant Estimate Of Your Project Cost!</a>
                   </div>
                 </div>
               </form>
