--- a/onboard.html
+++ b/onboard.html
@@ -16,6 +16,7 @@
     <script src="/assets/uuid.min.js"></script>
     <script>
       window.my_uuid = UUID.generate();
+      localStorage.setItem('uuid', my_uuid);
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
