--- a/thanks.html
+++ b/thanks.html
@@ -13,15 +13,15 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="assets/css/glyphicons.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="assets/styles/home_page.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="assets/styles/thanks.css" type="text/css" media="screen" />
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-92787448-1', 'auto');
-    ga('send', 'pageview');
-
+      ga('create', 'UA-92787448-1', 'auto');
+      ga('send', 'pageview');
     </script>
     <script>
       window.intercomSettings = {
@@ -38,21 +38,21 @@
       <nav class="amdrnt-navbar navbar navbar-default navbar-fixed-top">
         <div class="container">
           <div class="navbar-header">
-            <a href="http://amdirent.com"><img class="amdrnt-logo" role="presentation" alt="Logo" src="assets/images/logo.png"/></a>
+            <a href="/"><img class="amdrnt-logo" role="presentation" alt="Logo" src="assets/images/logo.png"/></a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="amdrnt-nav nav navbar-nav navbar-right">
               <li class="amdrnt-nav__item">
-                <a class="amdrnt-nav__item__link" href="http://amdirent.com#about">ABOUT</a>
+                <a class="amdrnt-nav__item__link" href="/#about">ABOUT</a>
               </li>
               <li class="amdrnt-nav__item">
-                <a class="amdrnt-nav__item__link" href="http://amdirent.com#services">SERVICES</a>
+                <a class="amdrnt-nav__item__link" href="/#services">SERVICES</a>
               </li>
               <li class="amdrnt-nav__item">
-                <a class="amdrnt-nav__item__link" href="http://amdirent.com#pricing">PRICING</a>
+                <a class="amdrnt-nav__item__link" href="/#pricing">PRICING</a>
               </li>
               <li class="amdrnt-nav__item">
-                <a class="amdrnt-nav__item__link" href="http://amdirent.com#contact">CONTACT</a>
+                <a class="amdrnt-nav__item__link" href="/#contact">CONTACT</a>
               </li>
             </ul>
           </div>
@@ -61,9 +61,45 @@
 
       <!-- Container (Services Section) -->
       <div id="services" class="container-fluid container-fluid--extra-padding text-center">
-        <h2>Perfect!</h2>
-        <h4>We're going to review the details of your project and send over a proposal. Sit back and you'll be hearing from us shortly!</h4>
-        <span class="glyphicons glyphicons-sunbath logo"></span>
+        <div class="pending-state">
+          <h2>Perfect!</h2>
+          <h4 class="pending-state__initial">We're generating an estimate for you!  Please give us a moment to finish up.</h4>
+          <h4 class="pending-state__second">We're still generating that estimate.  Just give us a few more moments...</h4>
+          <h4 class="pending-state__third">Still working.  Your estimate should be ready soon.</h4>
+
+          <span class="glyphicons glyphicons-refresh glyphicon-spin logo"></span>
+        </div>
+
+        <div class="timeout-state">
+          <h2>Hmmm...</h2>
+          <h4>
+            It looks like our calculator is taking a long time.
+            Once it finishes, we'll review your estimate and get back to you.
+          </h4>
+          <p>If you'd like to wait a bit longer, we'll keep trying to pull your estimate.</p>
+          <span class="glyphicons glyphicons-question-sign logo"></span>
+        </div>
+
+        <div class="success-state">
+          <h2>Your Estimate</h2>
+          <h4>
+            We've generated an estimate of your project based on your answers.
+            <br/>
+            We estimate your project will cost around <b class="js__estimate"></b>
+          </h4>
+          <button class="btn btn-primary btn-cta">Request a Proposal Now!</button>
+          <br/>
+          <span class="glyphicons glyphicons-ok-circle logo"></span>
+        </div>
+
+        <div class="error-state">
+          <h2>We're Sorry!</h2>
+          <h4>
+            It looks like something's gone wrong with our calculator.
+            We still have your answers and we'll review them manually and get back to you soon!
+          </h4>
+          <span class="glyphicons glyphicons-remove-circle logo"></span>
+        </div>
       </div>
 
 
@@ -71,5 +107,6 @@
         <h4 style="margin: 0px;">The Amdirent Team</h4>
       </div>
 
+      <script src="assets/calculator.js" async></script>
   </body>
 </html>
