Move intercom js to its own file

--- a/thanks.html
+++ b/thanks.html
@@ -50,4 +50,4 @@ header_include: thanks_css.html
   <h4 style="margin: 0px;">The Amdirent Team</h4>
 </div>
 
-<script src="assets/calculator.js" async></script>
+<script src="/assets/calculator.js" async></script>
