Hook up CTA on Thanks page
Points to talk-soon page.  Also modified the language a bit.  It
seemed simultaneously too chill and too formal.

--- a/talk-soon.html
+++ b/talk-soon.html
@@ -3,7 +3,7 @@
 <!-- Container (Services Section) -->
 <div id="services" class="container-fluid container-fluid--extra-padding text-center">
   <h2>Be cool, we got this.</h2>
-  <h4>Let us figure out whom on the team should respond. We'll be in touch shortly.</h4>
+  <h4>Someone on our team will review your request and get back to you soon.</h4>
   <span class="glyphicons glyphicons-sunglasses logo"></span>
 </div>
 
