Re-add UUID generation code
Looks like it got accidentally deleted when I refactored to
templates

--- a/onboard.html
+++ b/onboard.html
@@ -1,4 +1,5 @@
 ---
+header_include: onboard_js.html
 ---
 <!-- Container (Services Section) -->
 <div id="services" class="container-fluid container-fluid--extra-padding text-center">
